// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render default text component styles 1`] = `
<p
  className="css-ms6223"
  fontFamily="IBM Plex Sans"
>
  text mex
</p>
`;

exports[`Text should render h1 component styles 1`] = `
<h1
  className="css-5egnv5"
  fontFamily="IBM Plex Sans"
>
  text mex
</h1>
`;

exports[`Text should render h2 component styles 1`] = `
<h2
  className="css-drfpaa"
  fontFamily="IBM Plex Sans"
>
  text mex
</h2>
`;

exports[`Text should render h3 component styles 1`] = `
<h3
  className="css-1n9884d"
  fontFamily="IBM Plex Sans"
>
  text mex
</h3>
`;
